--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -856,6 +856,7 @@ SET(View3D_CPP_SRCS
     CADNavigationStyle.cpp
     RevitNavigationStyle.cpp
     BlenderNavigationStyle.cpp
+    MultiTouchNavigationStyle.cpp
     MayaGestureNavigationStyle.cpp
     OpenCascadeNavigationStyle.cpp
     OpenSCADNavigationStyle.cpp
