Debug OCCT exceptions

--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -52,6 +52,7 @@ include_directories(
     ${EIGEN3_INCLUDE_DIR}
     ${COIN3D_INCLUDE_DIRS}
     ${PYTHON_INCLUDE_DIRS}
+    ${OCC_INCLUDE_DIR}
     ${XercesC_INCLUDE_DIRS}
     ${ZLIB_INCLUDE_DIR}
     ${3DCONNEXION_INCLUDE_DIR}
@@ -168,6 +169,10 @@ IF(SPNAV_FOUND)
         ${SPNAV_LIBRARIES}
     )
 ENDIF(SPNAV_FOUND)
+
+list(APPEND FreeCADGui_LIBS
+    ${OCC_LIBRARIES}
+)
 
 IF(OCULUS_FOUND)
     add_definitions(-DOCULUS_FOUND)
