--- a/tests/src/Mod/PartDesign/App/CMakeLists.txt
+++ b/tests/src/Mod/PartDesign/App/CMakeLists.txt
@@ -1,7 +1,10 @@
+include_directories(${CMAKE_SOURCE_DIR}/src/3rdParty/json/single_include/nlohmann)
+
 
 target_sources(PartDesign_tests_run PRIVATE
         BackwardCompatibility.cpp
         DatumPlane.cpp
+        FeatureHole.cpp
         ShapeBinder.cpp
         Pad.cpp
 )
