Sketcher: Add tests for ensuring accessing works for both old and new api

--- a/tests/src/Mod/Sketcher/App/CMakeLists.txt
+++ b/tests/src/Mod/Sketcher/App/CMakeLists.txt
@@ -1,4 +1,5 @@
 target_sources(Sketcher_tests_run PRIVATE
+        Constraint.cpp
         SketcherTestHelpers.cpp
         SketchObject.cpp
         SketchObjectChanges.cpp
